--- a/style.css
+++ b/style.css
@@ -6,3 +6,15 @@
 html {
     scroll-behavior: smooth;
 }
+header {
+    height: 100vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+header h1 {
+    margin-bottom: 5px;
+    border-bottom: 1px solid black;
+}
