--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    background-color: lightgray;
 }
 html {
     scroll-behavior: smooth;
 }
 header {
-    height: 100vh;
+    height: 20vh;
+    height: auto;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -18,17 +20,57 @@ header h1 {
     margin-bottom: 5px;
     padding-bottom: 2px;
     border-bottom: 1px solid black;
+    text-align: center;
+}
+.icon_div {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .all_animals {
     padding: 20px;
+    margin: 0 auto;
+}
+.animals-text-h2 {
+    width: 50%;
+    transform: translateX(50%);
+    border-bottom: 1px solid black;
+    text-align: center;
+}
+
+.all_animals h2, h3 {
+    width: 50%;
+    transform: translateX(50%);
+    text-align: center;
+}
+.single_animal {
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .single_animal img {
-    width: 100%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 100%;
+    max-height: 100%;
+}
+.single_animal p {
+    width: 50%;
+    transform: translateX(50%);
+    text-align: center;
 }
 footer {
     padding: 20px;
     background-color: darkblue;
     color: wheat;
     text-align: center;
+}
+footer p {
+    background-color: darkblue;
 }
